header section done

--- a/index.html
+++ b/index.html
@@ -14,11 +14,27 @@
 </head>
 
 <body>
-    <header>
-
+    <header class="header-section">
+        <nav class="nav-section">
+            <h4 class="nav-text color-1 inter-inter">
+                LOGO
+            </h4>
+            <button type="submit" class="button-style color-4">
+                Sign Up
+            </button>
+        </nav>
+        <div class="banner-content">
+            <h1 class="banner-text raleway-raleway">
+                Cool Dark UI Template
+            </h1>
+            <h1 class="banner-text raleway-raleway">
+                for Webflow Agencies!
+            </h1>
+            <button type="submit" class="button-style color-4">Stay Focused</button>
+        </div>
     </header>
     <main>
-
+        
     </main>
     <footer>
 
