two new section done

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Launchpad</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -19,7 +19,7 @@
             <h4 class="nav-text color-1 inter-inter">
                 LOGO
             </h4>
-            <button type="submit" class="button-style color-4">
+            <button type="submit" class="button-style color-4 raleway-raleway">
                 Sign Up
             </button>
         </nav>
@@ -30,11 +30,55 @@
             <h1 class="banner-text raleway-raleway">
                 for Webflow Agencies!
             </h1>
-            <button type="submit" class="button-style color-4">Stay Focused</button>
+            <button type="submit" class="button-style color-4 raleway-raleway">Stay Focused</button>
         </div>
     </header>
-    <main>
-        
+    <main class="main-section">
+        <section class="live-preview">
+            <div class="live-preview-text-section">
+                <h2 class="live-preview-header color-2 raleway-raleway">
+                    See It in Action
+                </h2>
+                <p class="live-preview-text color-3 raleway-raleway">
+                    Explore the live preview and imagine your brand in this bold new look.
+                </p>
+                <button class="button-style color-4 raleway-raleway"type="submit">
+                    Launch Live Preview
+                </button>
+            </div>
+            <img src="Assets/wc-mini.png" alt="" class="live-preview-image">
+        </section>
+        <section class="brand-metrics">
+            <h2 class="brand-header raleway-raleway">
+                Joined Thousands of Productive Users
+            </h2>
+            <div class="metric-numbers">
+                <div class="metric-number">
+                    <h1 class="number color-1 inter-inter">
+                        50K
+                    </h1>
+                    <p class="caption inter-inter color-3">
+                        Active Users
+                    </p>
+                </div>
+                <div class="metric-number">
+                    <h1 class="number color-1 inter-inter">
+                        2M+
+                    </h1>
+                    <p class="caption inter-inter color-3">
+                        Focus Sessions
+                    </p>
+                </div>
+                <div class="metric-number">
+                    <h1 class="number color-1 inter-inter">
+                        95%
+                    </h1>
+                    <p class="caption inter-inter color-3">
+                        Satisfaction Rate
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
