user review section done

--- a/index.html
+++ b/index.html
@@ -79,6 +79,103 @@
                 </div>
             </div>
         </section>
+        <section class="user-review-section">
+            <h1 class="user-review-heading raleway-raleway color-2">
+                What our users say
+            </h1>
+            <div class="user-reviews">
+                <div class="user-review">
+                    <div class="stars">
+                        <img src="Assets/icon-star.png" alt="" class="star">
+                        <img src="Assets/icon-star.png" alt="" class="star">
+                        <img src="Assets/icon-star.png" alt="" class="star">
+                        <img src="Assets/icon-star.png" alt="" class="star">
+                        <img src="Assets/icon-star.png" alt="" class="star">
+                    </div>
+                    <h4 class="review-heading raleway-raleway .color-6">
+                        Loved by Designers
+                    </h4>
+                    <p class="review-text raleway-raleway .color-6">
+                        This template instantly leveled up our presence.” - Studio Vertex
+                    </p>
+                    <div class="reviewer">
+                        <img src="Assets/avatar.png" alt="" class="reviewer-picture">
+                        <div class="reviewer-data">
+                            <p class="reviewer-name inter-inter color-7">
+                                Reviewer name
+                            </p>
+                            <p class="review-date inter-inter color-7">
+                                Date
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="user-review">
+                    <div class="stars">
+                        <img src="Assets/icon-star.png" alt="" class="star">
+                        <img src="Assets/icon-star.png" alt="" class="star">
+                        <img src="Assets/icon-star.png" alt="" class="star">
+                        <img src="Assets/icon-star.png" alt="" class="star">
+                        <img src="Assets/icon-star.png" alt="" class="star">
+                    </div>
+                    <h4 class="review-heading raleway-raleway .color-6">
+                        Loved by Designers
+                    </h4>
+                    <p class="review-text raleway-raleway .color-6">
+                        This template instantly leveled up our presence.” - Studio Vertex
+                    </p>
+                    <div class="reviewer">
+                        <img src="Assets/avatar.png" alt="" class="reviewer-picture">
+                        <div class="reviewer-data">
+                            <p class="reviewer-name inter-inter color-7">
+                                Reviewer name
+                            </p>
+                            <p class="review-date inter-inter color-7">
+                                Date
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="user-review">
+                    <div class="stars">
+                        <img src="Assets/icon-star.png" alt="" class="star">
+                        <img src="Assets/icon-star.png" alt="" class="star">
+                        <img src="Assets/icon-star.png" alt="" class="star">
+                        <img src="Assets/icon-star.png" alt="" class="star">
+                        <img src="Assets/icon-star.png" alt="" class="star">
+                    </div>
+                    <h4 class="review-heading raleway-raleway .color-6">
+                        Loved by Designers
+                    </h4>
+                    <p class="review-text raleway-raleway .color-6">
+                        This template instantly leveled up our presence.” - Studio Vertex
+                    </p>
+                    <div class="reviewer">
+                        <img src="Assets/avatar.png" alt="" class="reviewer-picture">
+                        <div class="reviewer-data">
+                            <p class="reviewer-name inter-inter color-7">
+                                Reviewer name
+                            </p>
+                            <p class="review-date inter-inter color-7">
+                                Date
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="template-highlight">
+            <h1 class="highlight-header">
+                Ready to focus better
+            </h1>
+            <p class="highlight-text">
+                This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <button type="submit" class="highlight-button button-style color-4 raleway-raleway">
+                Ger Started Free
+            </button>
+            <img src="Assets/wc-big.png" alt="" class="highlight-image">
+        </section>
     </main>
     <footer>
 
