--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p class="live-preview-text color-3 raleway-raleway">
                     Explore the live preview and imagine your brand in this bold new look.
                 </p>
-                <button class="button-style color-4 raleway-raleway"type="submit">
+                <button class="button-style color-4 raleway-raleway" type="submit">
                     Launch Live Preview
                 </button>
             </div>
@@ -165,16 +165,30 @@
             </div>
         </section>
         <section class="template-highlight">
-            <h1 class="highlight-header">
+            <h1 class="highlight-header raleway-raleway color-5">
                 Ready to focus better
             </h1>
-            <p class="highlight-text">
-                This template instantly leveled up our presence.” – Studio Vertex
+            <p class="highlight-text raleway-raleway color-9">
+                This template instantly leveled up our presence.” - Studio Vertex
             </p>
             <button type="submit" class="highlight-button button-style color-4 raleway-raleway">
-                Ger Started Free
+                Get Started Free
             </button>
             <img src="Assets/wc-big.png" alt="" class="highlight-image">
+        </section>
+        <section class="connecting-form">
+            <h1 class="form-header raleway-raleway color-5">
+                Let's Get in Touch
+            </h1>
+            <form class="form-body">
+                <label class="inter-inter color-5" for="email">Email</label>
+                <input class="inter-inter color-9" type="email" name="" id="email" placeholder="example@email.com">
+                <label class="inter-inter color-5" for="name">Name</label>
+                <input class="inter-inter color-9" type="text" name="name" id="name" placeholder="full name">
+                <label class="inter-inter color-5" for="message">Message</label>
+                <textarea class="inter-inter color-9" name="message" cols="30" placeholder="write your message...."></textarea>
+                <button class="form-button" type="submit">Get in touch</button>
+            </form>
         </section>
     </main>
     <footer>
