--- a/index.html
+++ b/index.html
@@ -192,7 +192,18 @@
         </section>
     </main>
     <footer>
-
+        <h1 class="footer-header inter-inter color-1">
+            LOGO
+        </h1>
+        <p class="footer-text color-10 raleway-raleway">
+            Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.
+        </p>
+        <div class="footer-links">
+            <a href="" class="link color-10 raleway-raleway">Home</a>
+            <a href="" class="link color-10 raleway-raleway">About</a>
+            <a href="" class="link color-10 raleway-raleway">How it Works</a>
+            <a href="" class="link color-10 raleway-raleway">Services</a>
+        </div>
     </footer>
 </body>
 
