Minor Tweaks done

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <input class="inter-inter color-9" type="text" name="name" id="name" placeholder="full name">
                 <label class="inter-inter color-5" for="message">Message</label>
                 <textarea class="inter-inter color-9" name="message" cols="30" placeholder="write your message...."></textarea>
-                <button class="form-button" type="submit">Get in touch</button>
+                <button class="form-button inter-inter" type="submit">Get in touch</button>
             </form>
         </section>
     </main>
